# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

# Copyright 2024 MNX Cloud, Inc.

[package]
name = "zonememstat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
#tokio = {  version = "1.36", features = ["full"] }
tokio = "1.36"
tokio-process = "0.2.5"
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-process-stream = "0.4.0"
